Update game. Add Techie Hero.